# enkf_landmarks

./: .gitignore  README.md  enkf.py  ensemble.py  example_enkf.py  example_lddmm.py  generate_target.py  lddmm.py  lib_landmarks.py  manufacture_shape_data.py  pyproject.toml  requirements.txt  run_enkf.py  shoot_lddmm.py  test-lddmm_landmarks.py  test_enkf.py  test_kalman.py  test_lddmm.py  utils.py
data/LANDMARKS=10/TARGET_2020-12-08|18.17.42/: log_dir.pickle  p_ensemble_truth.pickle  target.pickle  template.pickle
data/LANDMARKS=10/TARGET_2020-12-08|18.17.58/: log_dir.pickle  p_ensemble_truth.pickle  (+2 more)
data/TARGET_1/: pe.pickle  pe_initial.pickle  target.pickle  template.pickle  weight_vector.pickle
data/TARGET_2/: pe.pickle  pe_initial.pickle  target.pickle  template.pickle  weight_vector.pickle
data/TARGET_3/: pe.pickle  pe_initial.pickle  target.pickle  template.pickle  weight_vector.pickle
data/TARGET_4/: pe.pickle  pe_initial.pickle  target.pickle  template.pickle
data/TARGET_5/: pe.pickle  pe_initial.pickle  target.pickle
data/TARGET_6/: pe_initial.pickle  target.pickle
data/TARGET_A/: target.pickle
data/TARGET_B/: pe.pickle
data/TARGET_C/: pe.pickle
enkf_landmarks/: enkf.py  ensemble.py  example_enkf.py  example_lddmm.py  manufacture_shape_data.py
src/: compute_p_truths.py  compute_relative_error.py  enkf.py  ensemble.py  example_enkf.py  example_lddmm.py  lddmm.py  manufacture_shape_data.py  old_example_enkf.py  plot_results.py  run_enkf.py  run_enkf_regularisation_effect.py  run_regularisation_experiment.py  utils.py  verify_gloo_pytorch.py
(+40 files in other folders)
