[tool.poetry]
name = "enkf_landmarks"
version = "0.1.0"
description = ""
authors = ["Andreas Bock"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "1.19.4"
matplotlib = "^3.3.3"
pykeops = "^1.4.1"
scipy = "^1.5.4"
torch = { url = "https://download.pytorch.org/whl/cpu/torch-1.7.0-cp37-none-macosx_10_9_x86_64.whl" }
torchvision = { url = "https://download.pytorch.org/whl/torchvision-0.8.1-cp37-cp37m-macosx_10_9_x86_64.whl" }
torchaudio = { url = "https://download.pytorch.org/whl/torchaudio-0.7.0-cp37-cp37m-macosx_10_9_x86_64.whl" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
